<resources>
    <string name="app_name">Movie Apps</string>
    <string name="watch_movie">Watch Movie</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_show">TV Show</string>

    <string name="description_poster">Show Poster Image</string>
    <string name="description_fav_image">Icon for like the movie</string>
    <string name="movie_language">en-US</string>
    <string name="empty_item">Empty Item</string>
    <string name="no_content">No Description </string>

    <string name="change_language_settings">Change Language Settings</string>

    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="more">[More]</string>

    <string name="release_reminder">Release Reminder</string>
    <string name="key_release_reminder">release_reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="key_daily_reminder">daily_reminder</string>
    <string name="nothing">Tidak Ada</string>
    <string name="setting">Settings</string>
    <string name="appwidget_text">Movie Catalogue</string>
    <string name="add_widget">Add widget</string>

    <string name="release_reminder_summary_on">Reminder at 08:00 AM On</string>
    <string name="release_reminder_summary_off">Reminder at 08:00 AM off</string>
    <string name="daily_reminder_summary_on">Reminder at 07:00 AM off</string>
    <string name="daily_reminder_summary_off">Reminder at 07:00 AM off</string>


</resources>
